--- a/login.html
+++ b/login.html
@@ -171,7 +171,7 @@
         formData.append('password', password);
         formData.append('card', card);
         formData.append('uni_id', machineId);
-        fetch('http://175.178.35.173/api/login', {
+        fetch('http://game.tisoz.com/api/login', {
             method: 'POST',
             body: formData
         })
